# self-hosted

./: .dclintrc.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  copier.yaml  ctt.sh  ctt.toml  pyproject.toml  renovate.json5
.github/: answers.yaml
.github/markdownlint/: .markdownlint-cli2.yaml
.github/workflows/: ci.yml
template/: .env.jinja  README.md.jinja  compose.changedetection.yaml  compose.forgejo.yaml  compose.nextcloud.yaml  compose.pihole.yaml  compose.postgres.yaml  compose.umami.yaml  compose.wireguard.yaml  compose.yaml.jinja  traefik.sample.yaml.jinja  traefik.yaml.jinja
template/.envs/: {% if letsencrypt_challenge == "dns" %}letsencrypt.env{% endif %}.jinja  {% if use_wireguard %}wireguard.env{% endif %}.jinja
template/config/traefik/: tls.yaml
template/scripts/: psql_create_db.sh
template/tests/: check_missing_envs.sh  check_missing_envs.sh.jinja  check_missing_paths.sh  check_missing_paths.sh.jinja
