[project]
name = "self-hosted"
version = "0"
requires-python = "==3.14.4"
dependencies = [
    "copier==9.15.0",
]

# https://docs.astral.sh/uv/reference/settings/#configuration
[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "copier-template-tester==2.4.0b0",
    "j2lint==1.2.0",
    "prek==0.4.4",
]
